# aws-rust-examples

NAME/: Cargo.toml
NAME/src/: main.rs
hello_world/: Cargo.toml  readme.md
hello_world/src/: main.rs
lambda_rust/: Cargo.toml
lambda_rust/src/: main.rs
