[package]
name = "NAME"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = "1"
log = "0.4"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
lambda-runtime = "0.4"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0" 
